--- a/tests/Makefile
+++ b/tests/Makefile
@@ -37,19 +37,23 @@ ifndef EC_SDK_SRC
 EC_SDK_SRC := $(DGGAL_ABSPATH)../eC
 endif
 
+ifndef GEOEXTENTS_SRC
+GEOEXTENTS_SRC := $(DGGAL_ABSPATH)../CartoSym
+endif
+
 RUNNER =
 
 _CF_DIR = $(EC_SDK_SRC)/
 include $(_CF_DIR)crossplatform.mk
 include $(_CF_DIR)default.cf
 ifndef WINDOWS_HOST
-export LD_LIBRARY_PATH := $(LD_LIBRARY_PATH):$(DGGAL_ABSPATH)obj/$(CONFIG).$(HOST_PLATFORM)$(COMPILER_SUFFIX)$(DEBUG_SUFFIX)/
+export LD_LIBRARY_PATH := $(LD_LIBRARY_PATH):$(DGGAL_ABSPATH)obj/$(CONFIG).$(HOST_PLATFORM)$(COMPILER_SUFFIX)$(DEBUG_SUFFIX)/:$(GEOEXTENTS_SRC)/$(SODESTDIR)
 ifdef WINDOWS_TARGET
-export WINEPATH := $(WINEPATH);$(DGGAL_ABSPATH)obj/$(CONFIG).$(PLATFORM)$(COMPILER_SUFFIX)$(DEBUG_SUFFIX)/;$(EC_SDK_SRC)/obj/$(PLATFORM)$(COMPILER_SUFFIX)/bin/;$(EC_SDK_SRC)/deps/curl-8.5.0/obj/release.$(PLATFORM)$(COMPILER_SUFFIX);$(OPENSSL_BIN_DIR)
+export WINEPATH := $(WINEPATH);$(DGGAL_ABSPATH)obj/$(CONFIG).$(PLATFORM)$(COMPILER_SUFFIX)$(DEBUG_SUFFIX)/;$(EC_SDK_SRC)/obj/$(PLATFORM)$(COMPILER_SUFFIX)/bin/;$(GEOEXTENTS_SRC)/$(SODESTDIR)
 RUNNER = wine
 endif
 else
-export PATH := $(PATH);$(EC_SDK_SRC)/obj/$(HOST_PLATFORM)$(COMPILER_SUFFIX)/bin/;$(DGGAL_ABSPATH)obj/$(CONFIG).$(HOST_PLATFORM)$(COMPILER_SUFFIX)$(DEBUG_SUFFIX)/
+export PATH := $(PATH);$(EC_SDK_SRC)/obj/$(HOST_PLATFORM)$(COMPILER_SUFFIX)/bin/;$(DGGAL_ABSPATH)obj/$(CONFIG).$(HOST_PLATFORM)$(COMPILER_SUFFIX)$(DEBUG_SUFFIX)/;$(GEOEXTENTS_SRC)/$(SODESTDIR)
 endif
 
 # POST-INCLUDES VARIABLES
