Makefile.dgg.static: Avoid failing on missing UPX

--- a/Makefile.dgg.static
+++ b/Makefile.dgg.static
@@ -186,7 +186,7 @@ $(TARGET): $(SOURCES) $(RESOURCES_EAR) $(SYMBOLS) $(OBJECTS) | objdir
 ifndef NOSTRIP
 	$(STRIP) $(STRIPOPT) $(TARGET)
 endif
-	$(UPX) $(UPXFLAGS) $(TARGET)
+	-$(UPX) $(UPXFLAGS) $(TARGET)
 
 # SYMBOL RULES
 
