Removed ecrt bindings; Updated Makefiles; building C bindings in bindings/c

--- a/Makefile.dggal.static
+++ b/Makefile.dggal.static
@@ -154,6 +154,8 @@ ifdef WINDOWS_HOST
 else
 	$(AR) rcs $(TARGET) $(OBJECTS) $(LIBS)
 endif
+	$(call mkdir,$(DGGAL_ABSPATH)obj/$(PLATFORM)/lib)
+	$(call cp,$(TARGET),$(DGGAL_ABSPATH)obj/$(PLATFORM)/lib)
 
 # SYMBOL RULES
 
