--- a/bindings/c/Makefile.dggal_c.static
+++ b/bindings/c/Makefile.dggal_c.static
@@ -4,7 +4,8 @@ ifneq ($(V),1)
 .SILENT:
 endif
 
-MODULE := ecrt
+MODULE := dggal
+BINDING_NAME := dggal
 
 # CORE VARIABLES
 
@@ -13,6 +14,8 @@ CONFIG := release
 ifndef COMPILER
 COMPILER := default
 endif
+
+# C_BINDINGS_SYMBOLS_PREFIX_ENABLE := y
 
 TARGET_TYPE = sharedlib
 
@@ -32,31 +35,32 @@ include $(_CF_DIR)default.cf
 
 OBJ = obj/$(PLATFORM)$(COMPILER_SUFFIX)
 
-TARGET = $(OBJ)/lib$(MODULE).rlib
-
 SOURCES = $(MODULE).rs
-
-LIBS +=
 
 OFLAGS =
 
-OFLAGS += \
-	-L obj/$(PLATFORM)$(COMPILER_SUFFIX)$(DEBUG_SUFFIX)
-
-PRJ_CFLAGS += $(if $(DEBUG), -g, -O2 -ffast-math) -w
-
-RUSTFLAGS =
+PRJ_CFLAGS += $(if $(DEBUG), -g, -O2 -ffast-math) -w -I$(EC_SDK_SRC)/bindings/c -I$(DGGAL_ABSPATH)bindings/c -DEC_STATIC
 
 ifdef C_BINDINGS_SYMBOLS_PREFIX_ENABLE
 PRJ_CFLAGS += -DECPRFX=eC_
 endif
 
-SOURCES = $(_DEP_SOURCES) $(MODULE).rs
+_OBJECTS = $(_DEP_OBJECTS) $(OBJ)/$(BINDING_NAME)$(O)
+
+OBJECTS = $(_OBJECTS)
+
+SOURCES = $(_DEP_SOURCES) ../c/$(BINDING_NAME).c
+
+CBINDING_STATIC_LIB = $(OBJ)/lib$(BINDING_NAME)_cStatic.a
+
+TARGET = $(CBINDING_STATIC_LIB)
 
 all: objdir $(TARGET);
 
 # OBJECT RULES
 
+$(OBJ)/$(BINDING_NAME)$(O): ../c/$(BINDING_NAME).c
+	$(CC) $(CFLAGS) $(PRJ_CFLAGS) -c $(call quote_path,$<) -o $(call quote_path,$@)
 
 # TARGETS
 
@@ -67,15 +71,16 @@ $(SYMBOLS): | objdir
 $(OBJECTS): | objdir
 
 $(TARGET): $(SOURCES) $(OBJECTS) | objdir
-	rustc --crate-type lib $(RUSTFLAGS) $(MODULE).rs $(OFLAGS) $(LIBS) -o $(TARGET)
+	$(AR) rcs $(CBINDING_STATIC_LIB) $(_OBJECTS)
 	$(call mkdir,$(DGGAL_ABSPATH)obj/$(PLATFORM)/lib)
-	$(call cp,$(TARGET),$(DGGAL_ABSPATH)obj/$(PLATFORM)/lib)
+	$(call cp,$(CBINDING_STATIC_LIB),$(DGGAL_ABSPATH)obj/$(PLATFORM)/lib)
 
 cleantarget:
 	$(call rm,$(TARGET))
 
 clean: cleantarget
 	$(call rm,_OBJECTS)
+	$(call rm,$(OBJ)/lib$(BINDING_NAME)_cStatic.a)
 
 realclean: cleantarget
 	$(call rmr,$(OBJ))
