--- a/bindings_examples/c/Makefile.static
+++ b/bindings_examples/c/Makefile.static
@@ -3,7 +3,7 @@
 # CORE VARIABLES
 
 MODULE := info
-VERSION := 
+VERSION :=
 CONFIG := static
 ifndef COMPILER
 COMPILER := default
@@ -50,7 +50,7 @@ endif
 
 OBJ = obj/$(CONFIG).$(PLATFORM)$(COMPILER_SUFFIX)$(DEBUG_SUFFIX)/
 
-RES = 
+RES =
 
 TARGET_NAME := info
 
@@ -64,7 +64,7 @@ _OBJECTS = \
 OBJECTS = $(_OBJECTS)
 
 SOURCES = \
-	../../bindings/c/ecrt.c \
+	$(EC_SDK_SRC)/bindings/c/ecrt.c \
 	../../bindings/c/dggal.c \
 	info.c
 
@@ -86,7 +86,7 @@ endif
 PRJ_CFLAGS += \
 	 $(if $(DEBUG), -g, -O2 -ffast-math) $(FPIC) -Wall -DREPOSITORY_VERSION="\"$(REPOSITORY_VER)\"" \
 			 -DEC_STATIC \
-			 -I../../bindings/c
+			 -I../../bindings/c -I$(EC_SDK_SRC)/bindings/c
 
 ECFLAGS += -module $(MODULE)
 # PLATFORM-SPECIFIC OPTIONS
@@ -166,8 +166,8 @@ endif
 
 # OBJECT RULES
 
-$(OBJ)ecrt$(O): ../../bindings/c/ecrt.c
-	$(CC) $(CFLAGS) $(PRJ_CFLAGS) -c $(call quote_path,../../bindings/c/ecrt.c) -o $(call quote_path,$@)
+$(OBJ)ecrt$(O): $(EC_SDK_SRC)/bindings/c/ecrt.c
+	$(CC) $(CFLAGS) $(PRJ_CFLAGS) -c $(call quote_path,$(EC_SDK_SRC)/bindings/c/ecrt.c) -o $(call quote_path,$@)
 
 $(OBJ)dggal$(O): ../../bindings/c/dggal.c
 	$(CC) $(CFLAGS) $(PRJ_CFLAGS) -c $(call quote_path,../../bindings/c/dggal.c) -o $(call quote_path,$@)
