--- a/bindings_examples/cpp/Makefile.static
+++ b/bindings_examples/cpp/Makefile.static
@@ -68,9 +68,9 @@ OBJECTS = $(_OBJECTS)
 
 SOURCES = \
 	../../bindings/cpp/dggal.cpp \
-	../../bindings/cpp/ecrt.cpp \
+	$(EC_SDK_SRC)/bindings/cpp/ecrt.cpp \
 	../../bindings/c/dggal.c \
-	../../bindings/c/ecrt.c \
+	$(EC_SDK_SRC)/bindings/c/ecrt.c \
 	info.cpp
 
 RESOURCES =
@@ -92,7 +92,9 @@ PRJ_CFLAGS += \
 	 $(if $(DEBUG), -g, -O2 -ffast-math) $(FPIC) -Wall -DREPOSITORY_VERSION="\"$(REPOSITORY_VER)\"" \
 			 -DEC_STATIC \
 			 -I../../bindings/c \
-			 -I../../bindings/cpp
+			 -I../../bindings/cpp \
+			 -I$(EC_SDK_SRC)/bindings/c \
+			 -I$(EC_SDK_SRC)/bindings/cpp
 
 CUSTOM1_PRJ_CFLAGS = \
 			 -DECPRFX=eC_ \
@@ -163,14 +165,14 @@ endif
 $(OBJ)dggal.cpp$(O): ../../bindings/cpp/dggal.cpp
 	$(CXX) $(CXXFLAGS) $(PRJ_CFLAGS) -c $(call quote_path,../../bindings/cpp/dggal.cpp) -o $(call quote_path,$@)
 
-$(OBJ)ecrt.cpp$(O): ../../bindings/cpp/ecrt.cpp
-	$(CXX) $(CXXFLAGS) $(PRJ_CFLAGS) -c $(call quote_path,../../bindings/cpp/ecrt.cpp) -o $(call quote_path,$@)
+$(OBJ)ecrt.cpp$(O): $(EC_SDK_SRC)/bindings/cpp/ecrt.cpp
+	$(CXX) $(CXXFLAGS) $(PRJ_CFLAGS) -c $(call quote_path,$(EC_SDK_SRC)/bindings/cpp/ecrt.cpp) -o $(call quote_path,$@)
 
 $(OBJ)dggal$(O): ../../bindings/c/dggal.c
 	$(CC) $(CFLAGS) $(CUSTOM1_PRJ_CFLAGS) -c $(call quote_path,../../bindings/c/dggal.c) -o $(call quote_path,$@)
 
-$(OBJ)ecrt$(O): ../../bindings/c/ecrt.c
-	$(CC) $(CFLAGS) $(CUSTOM1_PRJ_CFLAGS) -c $(call quote_path,../../bindings/c/ecrt.c) -o $(call quote_path,$@)
+$(OBJ)ecrt$(O): $(EC_SDK_SRC)/bindings/c/ecrt.c
+	$(CC) $(CFLAGS) $(CUSTOM1_PRJ_CFLAGS) -c $(call quote_path,$(EC_SDK_SRC)/bindings/c/ecrt.c) -o $(call quote_path,$@)
 
 $(OBJ)info$(O): info.cpp
 	$(CXX) $(CXXFLAGS) $(PRJ_CFLAGS) -c $(call quote_path,info.cpp) -o $(call quote_path,$@)
