--- a/Makefile.dggal.static
+++ b/Makefile.dggal.static
@@ -68,6 +68,8 @@ _ECSOURCES = \
 	src/dggrs/RI7H.ec \
 	src/dggrs/IVEA7H.ec \
 	src/dggrs/ISEA7H.ec \
+	src/dggrs/HEALPixGrid.ec \
+	src/dggrs/RTEA7H.ec \
 	src/projections/ri5x6.ec \
 	src/projections/authalic.ec \
 	src/projections/barycentric5x6.ec \
@@ -213,6 +215,9 @@ $(OBJ)ISEA7H.sym: src/dggrs/ISEA7H.ec
 $(OBJ)HEALPixGrid.sym: src/dggrs/HEALPixGrid.ec
 	$(ECP) $(CFLAGS) $(CECFLAGS) $(ECFLAGS) $(PRJ_CFLAGS) -c $(call quote_path,src/dggrs/HEALPixGrid.ec) -o $(call quote_path,$@)
 
+$(OBJ)RTEA7H.sym: src/dggrs/RTEA7H.ec
+	$(ECP) $(CFLAGS) $(CECFLAGS) $(ECFLAGS) $(PRJ_CFLAGS) -c $(call quote_path,src/dggrs/RTEA7H.ec) -o $(call quote_path,$@)
+
 $(OBJ)ri5x6.sym: src/projections/ri5x6.ec
 	$(ECP) $(CFLAGS) $(CECFLAGS) $(ECFLAGS) $(PRJ_CFLAGS) -c $(call quote_path,src/projections/ri5x6.ec) -o $(call quote_path,$@)
 
@@ -302,6 +307,9 @@ $(OBJ)ISEA7H.c: src/dggrs/ISEA7H.ec $(OBJ)ISEA7H.sym | $(SYMBOLS)
 $(OBJ)HEALPixGrid.c: src/dggrs/HEALPixGrid.ec $(OBJ)HEALPixGrid.sym | $(SYMBOLS)
 	$(ECC) $(CFLAGS) $(CECFLAGS) $(ECFLAGS) $(PRJ_CFLAGS) $(FVISIBILITY) -c $(call quote_path,src/dggrs/HEALPixGrid.ec) -o $(call quote_path,$@) -symbols $(OBJ)
 
+$(OBJ)RTEA7H.c: src/dggrs/RTEA7H.ec $(OBJ)RTEA7H.sym | $(SYMBOLS)
+	$(ECC) $(CFLAGS) $(CECFLAGS) $(ECFLAGS) $(PRJ_CFLAGS) $(FVISIBILITY) -c $(call quote_path,src/dggrs/RTEA7H.ec) -o $(call quote_path,$@) -symbols $(OBJ)
+
 $(OBJ)ri5x6.c: src/projections/ri5x6.ec $(OBJ)ri5x6.sym | $(SYMBOLS)
 	$(ECC) $(CFLAGS) $(CECFLAGS) $(ECFLAGS) $(PRJ_CFLAGS) $(FVISIBILITY) -c $(call quote_path,src/projections/ri5x6.ec) -o $(call quote_path,$@) -symbols $(OBJ)
 
@@ -390,6 +398,9 @@ $(OBJ)ISEA7H$(O): $(OBJ)ISEA7H.c
 
 $(OBJ)HEALPixGrid$(O): $(OBJ)HEALPixGrid.c
 	$(CC) $(CFLAGS) $(PRJ_CFLAGS) $(FVISIBILITY) -c $(call quote_path,$(OBJ)HEALPixGrid.c) -o $(call quote_path,$@)
+
+$(OBJ)RTEA7H$(O): $(OBJ)RTEA7H.c
+	$(CC) $(CFLAGS) $(PRJ_CFLAGS) $(FVISIBILITY) -c $(call quote_path,$(OBJ)RTEA7H.c) -o $(call quote_path,$@)
 
 $(OBJ)ri5x6$(O): $(OBJ)ri5x6.c
 	$(CC) $(CFLAGS) $(PRJ_CFLAGS) $(FVISIBILITY) -c $(call quote_path,$(OBJ)ri5x6.c) -o $(call quote_path,$@)
