bindings: New C bindings with function wrappers - This avoids macros for use with binding generators like Panama (for Java)

--- a/bindings/c/Makefile.dggal_c.static
+++ b/bindings/c/Makefile.dggal_c.static
@@ -39,7 +39,7 @@ SOURCES = $(MODULE).rs
 
 OFLAGS =
 
-PRJ_CFLAGS += $(if $(DEBUG), -g, -O2 -ffast-math) -w -I$(EC_SDK_SRC)/bindings/c -I$(DGGAL_ABSPATH)bindings/c -DEC_STATIC
+PRJ_CFLAGS += $(if $(DEBUG), -g, -O2 -ffast-math) $(FPIC) -w -I$(EC_SDK_SRC)/bindings/c -I$(DGGAL_ABSPATH)bindings/c -DEC_STATIC
 
 ifdef C_BINDINGS_SYMBOLS_PREFIX_ENABLE
 PRJ_CFLAGS += -DECPRFX=eC_
