--- a/Makefile.dggal
+++ b/Makefile.dggal
@@ -74,7 +74,10 @@ _ECSOURCES = \
 	src/dggrs/IVEA4R.ec \
 	src/dggrs/ISEA4R.ec \
 	src/dggrs/RTEA4R.ec \
-	src/dggrs/ISEA7H-Z7.ec \
+	src/dggrs/RI7H_Z7.ec \
+	src/dggrs/ISEA7H_Z7.ec \
+	src/dggrs/IVEA7H_Z7.ec \
+	src/dggrs/RTEA7H_Z7.ec \
 	src/projections/ri5x6.ec \
 	src/projections/authalic.ec \
 	src/projections/barycentric5x6.ec \
@@ -279,8 +282,17 @@ $(OBJ)ISEA4R.sym: src/dggrs/ISEA4R.ec
 $(OBJ)RTEA4R.sym: src/dggrs/RTEA4R.ec
 	$(ECP) $(CFLAGS) $(CECFLAGS) $(ECFLAGS) $(PRJ_CFLAGS) -c $(call quote_path,src/dggrs/RTEA4R.ec) -o $(call quote_path,$@)
 
-$(OBJ)ISEA7H-Z7.sym: src/dggrs/ISEA7H-Z7.ec
-	$(ECP) $(CFLAGS) $(CECFLAGS) $(ECFLAGS) $(PRJ_CFLAGS) -c $(call quote_path,src/dggrs/ISEA7H-Z7.ec) -o $(call quote_path,$@)
+$(OBJ)RI7H_Z7.sym: src/dggrs/RI7H_Z7.ec
+	$(ECP) $(CFLAGS) $(CECFLAGS) $(ECFLAGS) $(PRJ_CFLAGS) -c $(call quote_path,src/dggrs/RI7H_Z7.ec) -o $(call quote_path,$@)
+
+$(OBJ)ISEA7H_Z7.sym: src/dggrs/ISEA7H_Z7.ec
+	$(ECP) $(CFLAGS) $(CECFLAGS) $(ECFLAGS) $(PRJ_CFLAGS) -c $(call quote_path,src/dggrs/ISEA7H_Z7.ec) -o $(call quote_path,$@)
+
+$(OBJ)IVEA7H_Z7.sym: src/dggrs/IVEA7H_Z7.ec
+	$(ECP) $(CFLAGS) $(CECFLAGS) $(ECFLAGS) $(PRJ_CFLAGS) -c $(call quote_path,src/dggrs/IVEA7H_Z7.ec) -o $(call quote_path,$@)
+
+$(OBJ)RTEA7H_Z7.sym: src/dggrs/RTEA7H_Z7.ec
+	$(ECP) $(CFLAGS) $(CECFLAGS) $(ECFLAGS) $(PRJ_CFLAGS) -c $(call quote_path,src/dggrs/RTEA7H_Z7.ec) -o $(call quote_path,$@)
 
 $(OBJ)ri5x6.sym: src/projections/ri5x6.ec
 	$(ECP) $(CFLAGS) $(CECFLAGS) $(ECFLAGS) $(PRJ_CFLAGS) -c $(call quote_path,src/projections/ri5x6.ec) -o $(call quote_path,$@)
@@ -386,8 +398,17 @@ $(OBJ)ISEA4R.c: src/dggrs/ISEA4R.ec $(OBJ)ISEA4R.sym | $(SYMBOLS)
 $(OBJ)RTEA4R.c: src/dggrs/RTEA4R.ec $(OBJ)RTEA4R.sym | $(SYMBOLS)
 	$(ECC) $(CFLAGS) $(CECFLAGS) $(ECFLAGS) $(PRJ_CFLAGS) $(FVISIBILITY) -c $(call quote_path,src/dggrs/RTEA4R.ec) -o $(call quote_path,$@) -symbols $(OBJ)
 
-$(OBJ)ISEA7H-Z7.c: src/dggrs/ISEA7H-Z7.ec $(OBJ)ISEA7H-Z7.sym | $(SYMBOLS)
-	$(ECC) $(CFLAGS) $(CECFLAGS) $(ECFLAGS) $(PRJ_CFLAGS) $(FVISIBILITY) -c $(call quote_path,src/dggrs/ISEA7H-Z7.ec) -o $(call quote_path,$@) -symbols $(OBJ)
+$(OBJ)RI7H_Z7.c: src/dggrs/RI7H_Z7.ec $(OBJ)RI7H_Z7.sym | $(SYMBOLS)
+	$(ECC) $(CFLAGS) $(CECFLAGS) $(ECFLAGS) $(PRJ_CFLAGS) $(FVISIBILITY) -c $(call quote_path,src/dggrs/RI7H_Z7.ec) -o $(call quote_path,$@) -symbols $(OBJ)
+
+$(OBJ)ISEA7H_Z7.c: src/dggrs/ISEA7H_Z7.ec $(OBJ)ISEA7H_Z7.sym | $(SYMBOLS)
+	$(ECC) $(CFLAGS) $(CECFLAGS) $(ECFLAGS) $(PRJ_CFLAGS) $(FVISIBILITY) -c $(call quote_path,src/dggrs/ISEA7H_Z7.ec) -o $(call quote_path,$@) -symbols $(OBJ)
+
+$(OBJ)IVEA7H_Z7.c: src/dggrs/IVEA7H_Z7.ec $(OBJ)IVEA7H_Z7.sym | $(SYMBOLS)
+	$(ECC) $(CFLAGS) $(CECFLAGS) $(ECFLAGS) $(PRJ_CFLAGS) $(FVISIBILITY) -c $(call quote_path,src/dggrs/IVEA7H_Z7.ec) -o $(call quote_path,$@) -symbols $(OBJ)
+
+$(OBJ)RTEA7H_Z7.c: src/dggrs/RTEA7H_Z7.ec $(OBJ)RTEA7H_Z7.sym | $(SYMBOLS)
+	$(ECC) $(CFLAGS) $(CECFLAGS) $(ECFLAGS) $(PRJ_CFLAGS) $(FVISIBILITY) -c $(call quote_path,src/dggrs/RTEA7H_Z7.ec) -o $(call quote_path,$@) -symbols $(OBJ)
 
 $(OBJ)ri5x6.c: src/projections/ri5x6.ec $(OBJ)ri5x6.sym | $(SYMBOLS)
 	$(ECC) $(CFLAGS) $(CECFLAGS) $(ECFLAGS) $(PRJ_CFLAGS) $(FVISIBILITY) -c $(call quote_path,src/projections/ri5x6.ec) -o $(call quote_path,$@) -symbols $(OBJ)
@@ -493,8 +514,17 @@ $(OBJ)ISEA4R$(O): $(OBJ)ISEA4R.c
 $(OBJ)RTEA4R$(O): $(OBJ)RTEA4R.c
 	$(CC) $(CFLAGS) $(PRJ_CFLAGS) $(FVISIBILITY) -c $(call quote_path,$(OBJ)RTEA4R.c) -o $(call quote_path,$@)
 
-$(OBJ)ISEA7H-Z7$(O): $(OBJ)ISEA7H-Z7.c
-	$(CC) $(CFLAGS) $(PRJ_CFLAGS) $(FVISIBILITY) -c $(call quote_path,$(OBJ)ISEA7H-Z7.c) -o $(call quote_path,$@)
+$(OBJ)RI7H_Z7$(O): $(OBJ)RI7H_Z7.c
+	$(CC) $(CFLAGS) $(PRJ_CFLAGS) $(FVISIBILITY) -c $(call quote_path,$(OBJ)RI7H_Z7.c) -o $(call quote_path,$@)
+
+$(OBJ)ISEA7H_Z7$(O): $(OBJ)ISEA7H_Z7.c
+	$(CC) $(CFLAGS) $(PRJ_CFLAGS) $(FVISIBILITY) -c $(call quote_path,$(OBJ)ISEA7H_Z7.c) -o $(call quote_path,$@)
+
+$(OBJ)IVEA7H_Z7$(O): $(OBJ)IVEA7H_Z7.c
+	$(CC) $(CFLAGS) $(PRJ_CFLAGS) $(FVISIBILITY) -c $(call quote_path,$(OBJ)IVEA7H_Z7.c) -o $(call quote_path,$@)
+
+$(OBJ)RTEA7H_Z7$(O): $(OBJ)RTEA7H_Z7.c
+	$(CC) $(CFLAGS) $(PRJ_CFLAGS) $(FVISIBILITY) -c $(call quote_path,$(OBJ)RTEA7H_Z7.c) -o $(call quote_path,$@)
 
 $(OBJ)ri5x6$(O): $(OBJ)ri5x6.c
 	$(CC) $(CFLAGS) $(PRJ_CFLAGS) $(FVISIBILITY) -c $(call quote_path,$(OBJ)ri5x6.c) -o $(call quote_path,$@)
