--- a/bindings/cpp/Makefile.dggal_cpp
+++ b/bindings/cpp/Makefile.dggal_cpp
@@ -8,7 +8,7 @@ BINDMODLOC := obj
 BINDING_MODULE := dggal
 BINDING_NAME := dggal
 MODULE := $(BINDING_NAME)_cpp
-VERSION := 0.0.1
+VERSION := 0.0.5
 CONFIG := release
 # CONTAINS_CXX := defined
 ifndef COMPILER
@@ -54,7 +54,7 @@ OBJ = obj/$(BINDING_NAME).$(CONFIG).$(PLATFORM)$(COMPILER_SUFFIX)$(DEBUG_SUFFIX)
 RES =
 
 ifdef LINUX_TARGET
-TARGET = $(OBJ)$(LP)$(MODULE)$(SO).0.0.1
+TARGET = $(OBJ)$(LP)$(MODULE)$(SO).$(VERSION)
 SONAME = -Wl,-soname,$(LP)$(MODULE)$(SO).0
 else
 TARGET = $(OBJ)$(LP)$(MODULE)$(SO)
