README: Updated - Change warning to limitation now that 7H sub-zones are implemented for hexagonal ancestral zones - Add mention of newly supported Z7 DGGRSs

--- a/bindings/c_fn/Makefile
+++ b/bindings/c_fn/Makefile
@@ -79,7 +79,7 @@ LIBS += \
 endif
 
 PRJ_CFLAGS += \
-	 $(if $(DEBUG), -g, -O2 -ffast-math) $(FPIC) -w -I. #-DECPRFX=eC_
+	 $(if $(DEBUG), -g, -O2 -ffast-math) $(FPIC) -w -DBINDINGS_SHARED -I. #-DECPRFX=eC_
 
 #(SPECIFIC_FLAGS)#
 
